--- a/roles/web-static/static/index.html
+++ b/roles/web-static/static/index.html
@@ -40,6 +40,9 @@
         <a class="nav-link" id="render-tab" data-toggle="pill"
            href="#pills-render" role="tab">Render</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/icfpc2019/deliverables/">Docs</a>
+    </li>
 </ul>
 <div class="tab-content" id="pills-tabContent">
     <div class="tab-pane fade show active" id="pills-rankings"
